GNOME Bugzilla – Bug 788680
"tracker daemon --get-log-verbosity" (and --set-log-verbosity) hit g_warn_if_reached ();
Last modified: 2017-10-11 15:44:12 UTC
On openSUSE Tumbleweed with tracker-2.0.1-1.1 . $ tracker daemon --get-log-verbosity Components: Store : debug Extract : debug Writeback: debug Miners (Only those with config listed): Files : debug (tracker daemon:18882): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18882): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18882): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18882): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18882): Tracker-WARNING **: (tracker-daemon.c:1708):daemon_run: code should not be reached and $ tracker daemon --set-log-verbosity debug Setting log verbosity for all components to “debug”… (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed Components: Store : debug Extract : debug Writeback: debug Miners (Only those with config listed): Files : debug (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (tracker daemon:18892): Tracker-WARNING **: (tracker-daemon.c:1708):daemon_run: code should not be reached
Created attachment 361143 [details] [review] tracker: Return correctly for {get,set}_log_verbosity Every command switch should return properly. Otherwise the code reaches g_warn_if_reached () and a warning is printed.
Comment on attachment 361143 [details] [review] tracker: Return correctly for {get,set}_log_verbosity Looks good, thanks!