tracker: Return correctly for {get,set}_log_verbosity

Every command switch should return properly. Otherwise the code
reaches g_warn_if_reached () and a warning is printed.

https://bugzilla.gnome.org/show_bug.cgi?id=788680